@@ -19,3 +19,6 @@ capture video from the screen, allowing to save in .gif
 or .avi
 >>
 
+- click on LCD makes keyboard blocked
+- can't resize window
+- CPU consumption
